--- a/Example/BEPlayerExamples/BEPlayerExamples/BEPlayerViewController.xib
+++ b/Example/BEPlayerExamples/BEPlayerExamples/BEPlayerViewController.xib
@@ -17,6 +17,8 @@
                 <outlet property="indicatorLoading" destination="rjM-Fh-4hD" id="mXY-Hz-49n"/>
                 <outlet property="labelDuration" destination="2WF-WD-snL" id="vxx-gs-kNo"/>
                 <outlet property="labelTime" destination="w3E-Z1-Aif" id="5xH-lK-n59"/>
+                <outlet property="segmentMode" destination="RUH-ic-ySa" id="aVv-9x-b6r"/>
+                <outlet property="segmentRate" destination="l1C-sH-Ly3" id="stC-sp-izh"/>
                 <outlet property="sliderProgress" destination="qyQ-gu-Jmg" id="xep-o0-tvF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewBoarder" destination="gYC-ZQ-A9L" id="dwK-uK-lMN"/>
@@ -142,7 +144,7 @@
                         </slider>
                         <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RUH-ic-ySa">
                             <rect key="frame" x="12" y="112" width="373" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <segments>
                                 <segment title="列表一次"/>
                                 <segment title="列表循环"/>
@@ -169,6 +171,21 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="l1C-sH-Ly3">
+                            <rect key="frame" x="156" y="156" width="229" height="32"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="0.5"/>
+                                <segment title="0.75x"/>
+                                <segment title="1.0x"/>
+                                <segment title="1.5"/>
+                                <segment title="0.75x"/>
+                                <segment title="2.0x"/>
+                            </segments>
+                            <connections>
+                                <action selector="onPlayRateChanged:" destination="-1" eventType="valueChanged" id="xxd-M7-Gg2"/>
+                            </connections>
+                        </segmentedControl>
                     </subviews>
                     <color key="backgroundColor" red="0.01006765463917525" green="0.01006765463917525" blue="0.01006765463917525" alpha="0.013153698979591837" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
@@ -215,16 +232,16 @@
         <image name="paintbrush" catalog="system" width="122" height="128"/>
         <image name="play" catalog="system" width="120" height="128"/>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
