@feat 支持自定义 key 下载

--- a/Example/BEPlayerExamples/BEPlayerExamples/Base.lproj/Main.storyboard
+++ b/Example/BEPlayerExamples/BEPlayerExamples/Base.lproj/Main.storyboard
@@ -35,6 +35,15 @@
                                     <action selector="preloadAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RiV-Sj-8Bn"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="225-bE-T9Z">
+                                <rect key="frame" x="55" y="373" width="68" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Clean"/>
+                                <connections>
+                                    <action selector="clean:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hqy-ue-jBx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
