--- a/Example/BEPlayerExamples/BEPlayerExamples/BEPlayerViewController.xib
+++ b/Example/BEPlayerExamples/BEPlayerExamples/BEPlayerViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="labelDuration" destination="2WF-WD-snL" id="vxx-gs-kNo"/>
                 <outlet property="labelProgress" destination="bzq-As-PJo" id="MYZ-wQ-BcD"/>
                 <outlet property="labelTime" destination="w3E-Z1-Aif" id="5xH-lK-n59"/>
+                <outlet property="labelTitle" destination="hMx-w2-XY1" id="lFr-pB-6fB"/>
                 <outlet property="segmentMode" destination="RUH-ic-ySa" id="aVv-9x-b6r"/>
                 <outlet property="segmentRate" destination="l1C-sH-Ly3" id="stC-sp-izh"/>
                 <outlet property="sliderProgress" destination="qyQ-gu-Jmg" id="xep-o0-tvF"/>
@@ -26,7 +27,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -34,6 +35,14 @@
                     <rect key="frame" x="0.0" y="0.0" width="393" height="604"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hMx-w2-XY1">
+                    <rect key="frame" x="70" y="68" width="254" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" systemColor="systemGray4Color"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="rjM-Fh-4hD">
                     <rect key="frame" x="178" y="347.66666666666669" width="37" height="37"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -106,7 +115,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="0.15765837585034015" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KV8-lW-HM9">
                             <rect key="frame" x="8.0000000000000036" y="50" width="51.333333333333343" height="35"/>
@@ -241,6 +250,9 @@
         <image name="play" catalog="system" width="120" height="128"/>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
